trustfall_core/test_data/tests/valid_queries/fold_count_filter_lt.graphql.ron
TestGraphQLQuery (
    // We use a negative number as a filter to ensure that we properly handle the negative number case in get_max_fold_count_limit.
    schema_name: "numbers",
    query: r#"
{
    Number(min: 4, max: 6) {
        ... on Composite {
            value @output

            primeFactor @fold @transform(op: "count") @filter(op: "<", value: ["$neg_two"]) {
                factors: value @output
            }
        }
    }
}"#,
    arguments: {
        "neg_two": Int64(-2),
    },
)
